added artefactController and routes/ Split routes.
