# routes/artefactRoutes.js
@@ -1,22 +1,6 @@
 const express = require("express");
 const router = express.Router();
-const artistController = require("../controllers/artistController");
 const artefactController = require("../controllers/artefactController");
-
-// Filters artists
-router.get('/artists', artistController.filter);
-
-// Gets all artists
-router.get('/artists', artistController.artistList);
-
-// Gets artist by id
-router.get('/artists/:id', artistController.artistById);
-
-// Posts new artist
-router.post('/artists', artistController.createArtist);
-
-// Updates an artist
-router.post('/artists/:id', artistController.updateArtist);
 
 // Filters artefacts
 router.get('/artefacts', artefactController.filter);
