# routes/artistRoutes.js
@@ -1,7 +1,6 @@
 const express = require("express");
 const router = express.Router();
 const artistController = require("../controllers/artistController");
-const artefactController = require("../controllers/artefactController");
 
 // Filters artists
 router.get('/artists', artistController.filter);
@@ -17,20 +16,5 @@ router.post('/artists', artistController.createArtist);
 
 // Updates an artist
 router.post('/artists/:id', artistController.updateArtist);
-
-// Filters artefacts
-router.get('/artefacts', artefactController.filter);
-
-// Gets all artefacts
-router.get('/artefacts', artefactController.artefactList);
-
-// Gets artefacts by id
-router.get('/artefacts/:id', artefactController.artefactById);
-
-// Posts new artefacts
-router.post('/artefacts', artefactController.createArtefact);
-
-// Updates an artefacts
-router.post('/artefacts/:id', artefactController.updateArtefact);
 
 module.exports = router;
