# swagger.json
@@ -14,6 +14,9 @@
     "/artists": {
       "get": {
         "description": "",
+        "tags": [
+            "artists"
+        ],
         "parameters": [],
         "responses": {
           "200": {
@@ -23,6 +26,9 @@
       },
       "post": {
         "description": "",
+        "tags": [
+            "artists"
+        ],
         "parameters": [
           {
             "name": "body",
@@ -59,6 +65,9 @@
     "/artists/{id}": {
       "get": {
         "description": "",
+        "tags": [
+            "artists"
+        ],
         "parameters": [
           {
             "name": "id",
@@ -78,33 +87,131 @@
       },
       "post": {
         "description": "",
+        "tags": [
+            "artefacts"
+        ],
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "required": true,
             "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
           },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/artefacts": {
+      "get": {
+        "description": "",
+        "tags": [
+            "artefacts"
+        ],
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      },
+      "post": {
+        "description": "",
+        "tags": [
+            "artefacts"
+        ],
+        "parameters": [
           {
             "name": "body",
             "in": "body",
             "schema": {
               "type": "object",
               "properties": {
-                "first_name": {
+                "artist": {
                   "example": "any"
                 },
-                "last_name": {
+                "title": {
                   "example": "any"
                 },
-                "dob": {
+                "description": {
+                  "example": "any"
+                },
+                "type": {
+                  "example": "any"
+                },
+                "material": {
+                  "example": "any"
+                },
+                "date": {
                   "example": "any"
                 }
               }
             }
           }
         ],
-        "responses": {}
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/artefacts/{id}": {
+      "get": {
+        "description": "",
+        "tags": [
+            "artefacts"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      },
+      "post": {
+        "description": "",
+        "tags": [
+            "artefacts"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
       }
     }
   }
